// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": true,
  "exchangePrices": Object {},
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {},
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": false,
  "exchangePrices": Object {},
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {},
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer info 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {},
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token1",
    },
    Object {
      "code": "token2",
    },
  ],
}
`;

exports[`ws reducer info 2`] = `
Array [
  Array [
    "token1|WETH",
  ],
  Array [
    "token2|WETH",
  ],
]
`;

exports[`ws reducer info overlapping tokens 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {},
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer info overlapping tokens 2`] = `
Array [
  Array [
    "token3|WETH",
  ],
]
`;

exports[`ws reducer info overlapping tokens 3`] = `
Array [
  Array [
    "token1|WETH",
  ],
]
`;

exports[`ws reducer notification 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "level",
    "message": " message",
    "title": "title",
    "transactionHash": "txHash",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer order 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {
    "pair1": Array [
      Object {
        "currentSequence": 456,
        "pair": "pair1",
        "userOrder": "from single order",
      },
      Object {
        "currentSequence": 123,
        "pair": "pair1",
        "userOrders": "fromList",
      },
    ],
    "pair2": Array [
      Object {
        "currentSequence": 789,
        "pair": "pair2",
        "userOrders": "fromList",
      },
    ],
  },
  "orderSubscription": "account",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer order new pair 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {
    "pair1": Array [
      Object {
        "currentSequence": 456,
        "pair": "pair1",
        "userOrder": "from single order",
      },
      Object {
        "currentSequence": 123,
        "pair": "pair1",
        "userOrders": "fromList",
      },
    ],
    "pair2": Array [
      Object {
        "currentSequence": 789,
        "pair": "pair2",
        "userOrders": "fromList",
      },
    ],
    "pair3": Array [
      Object {
        "currentSequence": 999,
        "pair": "pair3",
        "userOrder": "from single order",
      },
    ],
  },
  "orderSubscription": "account",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderBookSnapshot 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderBookSnapshot different pair 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderBookUpdate 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderBookUpdate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    Object {
      "pair": "pair",
    },
  ],
]
`;

exports[`ws reducer orderBookUpdate pair without snapshot 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderHistory 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {
    "pair1": Array [
      Object {
        "currentSequence": 456,
        "pair": "pair1",
        "userOrders": "fromList",
      },
      Object {
        "currentSequence": 123,
        "pair": "pair1",
        "userOrders": "fromList",
      },
    ],
    "pair2": Array [
      Object {
        "currentSequence": 789,
        "pair": "pair2",
        "userOrders": "fromList",
      },
    ],
  },
  "orderSubscription": "account",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderHistory empty 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "account",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderSubscription again 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderSubscription dummy 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "0x0000000000000000000000000000000000000000",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderSubscription dummy off 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderSubscription off 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;

exports[`ws reducer orderSubscription off 2`] = `
Array [
  Array [
    "account",
  ],
]
`;

exports[`ws reducer orderSubscription on 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "notification": Object {
    "level": "",
    "message": "",
    "title": "",
    "transactionHash": "",
  },
  "orderBookSnapshot": Object {
    "pair": Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    "test": Object {
      "pair": "test",
    },
  },
  "orderHistory": Object {},
  "orderSubscription": "account",
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    Object {
      "code": "token2",
    },
    Object {
      "code": "token3",
    },
  ],
}
`;
